# poetry_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/poetry_template/: main.py
